Spacing fix

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1098,7 +1098,7 @@ a {
 }
 .cid-ufrYUPpEJK {
   padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
 }
 .cid-ufrYUPpEJK .mbr-fallback-image.disabled {
@@ -1145,8 +1145,8 @@ a {
   justify-content: center;
 }
 .cid-ufrTU1mJjc {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
 .cid-ufrTU1mJjc img,
